test/bad/def_not_var.pa
def foo for a b {
    foo(a,S(b)) <-> a = b
}
